--- a/writing/data-provenance.rmd
+++ b/writing/data-provenance.rmd
@@ -2,7 +2,12 @@
 title: "Data Provenance and Software Genology of Genomic Surveillance Infrastructure"
 date: "`r Sys.Date()`"
 author: "Nathanael Sheehan & Sabina Leonelli"
-output: pdf_document
+output:
+  rmdformats::downcute:
+    self_contained: true
+    default_style: "light"
+    downcute_theme: "default"
+
 ---
 
 # Abstract
@@ -27,6 +32,155 @@ Two types of data are necessary in order to map the high level data provenance p
 
 For each data portal the following command was used:
 
+``` bash
+./whatweb -v https://www.dataportal-url.org -a 1
+```
+
+Where `-v` gives a verbose output of the results and `-a 1` represents a soft level of pen test. The results for each data portal can be found in the following code chunks.
+
+### The Covid-19 Data Portal
+```
+WhatWeb report for https://www.covid19dataportal.org/
+Status    : 200 OK
+Title     : COVID-19 Data Portal - accelerating scientific research through data
+IP        : 193.62.193.83
+Country   : UNITED KINGDOM, GB
+Summary   : HTML5, UncommonHeaders[x-content-type-options,x-download-options,x-permitted-cross-domain-policies,referrer-policy,access-control-allow-origin], Apache, Google-Analytics[Universal][UA-163982534-1], HTTPServer[Apache], X-Frame-Options[SAMEORIGIN], Strict-Transport-Security[max-age=63072000; includeSubDomains; preload], Script[module], X-XSS-Protection[1; mode=block]
+Detected Plugins:
+[ Apache ]
+	The Apache HTTP Server Project is an effort to develop and 
+	maintain an open-source HTTP server for modern operating 
+	systems including UNIX and Windows NT. The goal of this 
+	project is to provide a secure, efficient and extensible 
+	server that provides HTTP services in sync with the current 
+	HTTP standards. 
+	Google Dorks: (3)
+	Website     : http://httpd.apache.org/
+[ Google-Analytics ]
+	This plugin identifies the Google Analytics account. 
+	Version      : Universal
+	Account      : UA-163982534-1
+	Website     : http://www.google.com/analytics/
+[ HTML5 ]
+	HTML version 5, detected by the doctype declaration 
+[ HTTPServer ]
+	HTTP server header string. This plugin also attempts to 
+	identify the operating system from the server header. 
+	String       : Apache (from server string)
+[ Script ]
+	This plugin detects instances of script HTML elements and 
+	returns the script language/type. 
+	String       : module
+[ Strict-Transport-Security ]
+	Strict-Transport-Security is an HTTP header that restricts 
+	a web browser from accessing a website without the security 
+	of the HTTPS protocol. 
+	String       : max-age=63072000; includeSubDomains; preload
+[ UncommonHeaders ]
+	Uncommon HTTP server headers. The blacklist includes all 
+	the standard headers and many non standard but common ones. 
+	Interesting but fairly common headers should have their own 
+	plugins, eg. x-powered-by, server and x-aspnet-version. 
+	Info about headers can be found at www.http-stats.com 
+	String       : x-content-type-options,x-download-options,x-permitted-cross-domain-policies,referrer-policy,access-control-allow-origin (from headers)
+[ X-Frame-Options ]
+	This plugin retrieves the X-Frame-Options value from the 
+	HTTP header. - More Info: 
+	http://msdn.microsoft.com/en-us/library/cc288472%28VS.85%29.
+	aspx
+	String       : SAMEORIGIN
+[ X-XSS-Protection ]
+	This plugin retrieves the X-XSS-Protection value from the 
+	HTTP header. - More Info: 
+	http://msdn.microsoft.com/en-us/library/cc288472%28VS.85%29.
+	aspx
+	String       : 1; mode=block
+HTTP Headers:
+	HTTP/1.1 200 OK
+	Date: Mon, 31 Oct 2022 17:34:27 GMT
+	Server: Apache
+	X-Content-Type-Options: nosniff
+	X-XSS-Protection: 1; mode=block
+	X-Frame-Options: SAMEORIGIN
+	X-Download-Options: noopen
+	X-Permitted-Cross-Domain-Policies: none
+	Strict-Transport-Security: max-age=63072000; includeSubDomains; preload
+	Referrer-Policy: same-origin
+	Access-Control-Allow-Origin: *
+	Last-Modified: Mon, 31 Oct 2022 08:09:31 GMT
+	ETag: "263a-5ec502092487f-gzip"
+	Accept-Ranges: bytes
+	Vary: Accept-Encoding
+	Content-Encoding: gzip
+	Content-Length: 2714
+	Connection: close
+	Content-Type: text/html; charset=UTF-8
+```
+
+### GISAID
+
+```
+WhatWeb report for https://epicov.org/
+Status    : 301 Moved Permanently
+Title     : 301 Moved Permanently
+IP        : 104.22.50.160
+Country   : UNITED STATES, US
+Summary   : UncommonHeaders[cf-cache-status,cf-ray], HTTPServer[cloudflare], RedirectLocation[https://www.gisaid.org/]
+Detected Plugins:
+[ HTTPServer ]
+	HTTP server header string. This plugin also attempts to 
+	identify the operating system from the server header. 
+	String       : cloudflare (from server string)
+[ RedirectLocation ]
+	HTTP Server string location. used with http-status 301 and 
+	302 
+	String       : https://www.gisaid.org/ (from location)
+[ UncommonHeaders ]
+	Uncommon HTTP server headers. The blacklist includes all 
+	the standard headers and many non standard but common ones. 
+	Interesting but fairly common headers should have their own 
+	plugins, eg. x-powered-by, server and x-aspnet-version. 
+	Info about headers can be found at www.http-stats.com 
+	String       : cf-cache-status,cf-ray (from headers)
+HTTP Headers:
+	HTTP/1.1 301 Moved Permanently
+	Date: Mon, 31 Oct 2022 17:39:48 GMT
+	Content-Type: text/html; charset=iso-8859-1
+	Transfer-Encoding: chunked
+	Connection: close
+	Location: https://www.gisaid.org/
+	CF-Cache-Status: DYNAMIC
+	Server: cloudflare
+	CF-RAY: 762e2c16af9e188f-MAN
+	
+WhatWeb report for https://www.gisaid.org/
+Status    : 403 Forbidden
+Title     : 403 Forbidden
+IP        : 78.46.3.243
+Country   : GERMANY, DE
+Summary   : Apache, HTTPServer[Apache]
+Detected Plugins:
+[ Apache ]
+	The Apache HTTP Server Project is an effort to develop and 
+	maintain an open-source HTTP server for modern operating 
+	systems including UNIX and Windows NT. The goal of this 
+	project is to provide a secure, efficient and extensible 
+	server that provides HTTP services in sync with the current 
+	HTTP standards. 
+	Google Dorks: (3)
+	Website     : http://httpd.apache.org/
+[ HTTPServer ]
+	HTTP server header string. This plugin also attempts to 
+	identify the operating system from the server header. 
+	String       : Apache (from server string)
+HTTP Headers:
+	HTTP/1.1 403 Forbidden
+	Date: Mon, 31 Oct 2022 17:39:50 GMT
+	Server: Apache
+	Content-Length: 264
+	Connection: close
+	Content-Type: text/html; charset=iso-8859-1
+```
 
 In order to access data and metadata records, a manual collection of data and metadata was carried out for each platform on October 30th 2022. To standardise this process, each manual collection was led by the accession of the same sequence for each portal, the number of "hops" were then recorded to show the infrastructural lineage of the data, as well as documenting supplementary metadata associated with a given sequence. Data accessed through GISAID was conducted following their terms of use policy.
 
@@ -44,18 +198,10 @@ knitr::include_graphics("../plots/presentation/covid-19-data-portal-data-metadat
 ## Conclusion
 
 ## Acknowledgements
-
 This project has received funding from the European Research Council (ERC) under the European Union’s Horizon 2020 research and innovation programme (grant agreement No. 101001145). This paper reflects only the author's view and that the Commission / Agency is not responsible for any use that may be made of the information it contains.
-
 ## Biblography
-
 Gupta, A. (2009). Data Provenance. In: LIU, L., ÖZSU, M.T. (eds) Encyclopedia of Database Systems. Springer, Boston, MA. https://doi.org/10.1007/978-0-387-39940-9_1305
-
 Leonelli, S. (2019). Data Governance is Key to Interpretation: Reconceptualizing Data in Data Science. Harvard Data Science Review, 1(1). https://doi.org/10.1162/99608f92.17405bb6
-
 Leonelli, Sabina (2020). "Scientific research and big data." https://plato.stanford.edu/entries/science-big-data/?ref=hackernoon.com
-
 Lin, D., Crabtree, J., Dillo, I. et al. The TRUST Principles for digital repositories. Sci Data 7, 144 (2020). https://doi.org/10.1038/s41597-020-0486-7
-
 Yogesh L. Simmhan, Beth Plale, and Dennis Gannon. 2005. A survey of data provenance in e-science. SIGMOD Rec. 34, 3 (September 2005), 31–36. https://doi.org/10.1145/1084805.1084812
-
